[package]
name = "camera-software-new"
version = "0.1.0"
authors = ["UnicornsOnLSD <jmsharvey771@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bardecoder = "0.2.2"
image = "0.22"
rascam = "0.0.2"
confy = "0.4.0"
uuid = { version = "0.8.2", features = ["serde"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.61"