[package]
name = "camera-software-new"
version = "0.1.0"
authors = ["UnicornsOnLSD <jmsharvey771@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bardecoder = "0.2.2"
image = "0.22"
rascam = "0.0.2"
confy = "0.4.0"
uuid = { version = "0.8.2", features = ["serde"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.61"
reqwest = { version = "0.11", features = ["blocking", "json"] }
openssl = { version = "0.10.32", features = ["vendored"] }

# [features]
# If compiling on a system without OpenSSL installed, or cross-compiling for a different
# architecture, enable this feature to compile OpenSSL as part of the build.
# See https://docs.rs/openssl/#vendored for more.
# static_ssl = ['openssl/vendored']

# [dependencies.openssl]
# optional = true